--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,7 @@
 (executable
  (public_name cow_of_ocaml)
  (name main)
- (libraries cow_of_ocaml))
+ (libraries cow_of_ocaml core core_bench)
+ (preprocess
+  (pps ppx_jane))
+ (link_flags -linkall))
