--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,11 @@
 (library
  (name cow_of_ocaml)
- (libraries core fmt zarith cow_of_ocaml.BinaryExponentiation)
+ (libraries
+  core
+  fmt
+  zarith
+  cow_of_ocaml.BinaryExponentiation
+  cow_of_ocaml.EuclideanGCD)
  (inline_tests)
  (preprocess
   (pps ppx_jane)))
